<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp"
        android:background="@color/colorBackGround">

    <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/welcome_back"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/backspace_white"/>

    <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_header"
            android:textColor="@color/colorHalfWhite"
            android:transitionName="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:textSize="30sp"/>

    <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/forgot_password_header"
              android:textColor="@color/colorHalfWhite"
              app:layout_constraintTop_toBottomOf="@+id/header"
              android:paddingTop="10dp"
              android:paddingBottom="20dp"
              android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sub_title"
            android:background="@drawable/curved_buttens_style"
            android:backgroundTint="@color/colorButtonBg"
            android:textColor="@color/colorHalfWhite"
            android:textColorHint="@color/colorHalfWhite"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:padding="10dp"
            android:inputType="number">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:background="@drawable/curved_buttens_style"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorYellow"
            android:textColor="@color/colorBackGround"
            android:text="@string/send"/>

</androidx.constraintlayout.widget.ConstraintLayout>