<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_launch"
        android:padding="20dp">

    <TextView
            android:id="@+id/snap_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/snap_and_share"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorHalfWhite"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="40sp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/sign"
            android:background="@drawable/curved_buttens_style"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:transitionName="login"
            android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/curved_buttens_style"
            android:backgroundTint="@color/colorYellow"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="15dp"
            android:transitionName="sign"
            android:text="@string/signup"/>



</androidx.constraintlayout.widget.ConstraintLayout>