<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/colorBackGround">

    <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/welcome_back"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/backspace_white"/>

    <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorHalfWhite"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:background="@drawable/curved_buttens_style"
            android:backgroundTint="@color/colorButtonBg"
            android:textColor="@color/colorHalfWhite"
            android:textColorHint="@color/colorHalfWhite"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:inputType="number">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/phone_number"
            android:background="@drawable/curved_buttens_style"
            android:backgroundTint="@color/colorButtonBg"
            android:textColor="@color/colorHalfWhite"
            android:textColorHint="@color/colorHalfWhite"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:inputType="textPassword">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:background="@drawable/curved_buttens_style"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorYellow"
            android:textColor="@color/colorBackGround"
            android:transitionName="login"
            android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:background="@drawable/curved_buttens_style"
            android:backgroundTint="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="15dp"
            android:text="@string/login"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/colorHalfWhite"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:linksClickable="true"
            android:transitionName="@string/forgot_password"
            android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>